WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235409
Non-unified build fails due to forward declaration missing from JavaScriptCore/jit/JITStubRoutine.h
https://bugs.webkit.org/show_bug.cgi?id=235409
Summary
Non-unified build fails due to forward declaration missing from JavaScriptCor...
Pablo Saavedra
Reported
2022-01-20 09:23:32 PST
SSIA Unreviewed change.
Attachments
patch
(1.07 KB, patch)
2022-01-20 09:24 PST
,
Pablo Saavedra
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pablo Saavedra
Comment 1
2022-01-20 09:24:46 PST
Created
attachment 449590
[details]
patch
EWS
Comment 2
2022-01-20 13:15:31 PST
psaavedra@igalia.com
does not have reviewer permissions according to
https://raw.githubusercontent.com/WebKit/WebKit/main/metadata/contributors.json
. Rejecting
attachment 449590
[details]
from commit queue.
EWS
Comment 3
2022-01-20 14:08:10 PST
Committed
r288324
(
246236@main
): <
https://commits.webkit.org/246236@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449590
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-01-20 14:09:18 PST
<
rdar://problem/87849076
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug