Non-unified build fails due to forward declaration in JavaScriptCore/jit/JITStubRoutine.h https://bugs.webkit.org/show_bug.cgi?id=235409

Unreviewed non-unified build fix.


* jit/JITStubRoutine.h:



Canonical link: https://commits.webkit.org/246236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288324 268f45cc-cd09-0410-ab3c-d52691b4dbfc